--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,17 @@
 {
-    "manifest_version": 3,
-    "name": "SecurePass Generator",
-    "version": "1.0",
-    "description": "SecurePass Generator is a simple and secure tool for creating strong passwords.",
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "icons/icon16.png",
-        "48": "icons/icon48.png",
-        "128": "icons/icon128.png"
-      }
-    },
-    "permissions": []
-  }
-  
+  "manifest_version": 3,
+  "name": "SecurePass Generator",
+  "version": "1.0",
+  "description": "Generates strong, random passwords with customizable length. Easily create and copy secure passwords, and contact support through a built-in button.",
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
+  },
+  "permissions": [
+    "activeTab"
+  ]
+}
