--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "SecurePass Generator",
-  "version": "1.2",
-  "description": "Generates strong, random passwords with customizable length. Easily create and copy secure passwords, and contact support through a built-in button.",
+  "version": "1.0",
+  "description": "Generate and manage passwords securely.",
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -11,7 +11,13 @@
       "128": "icons/icon128.png"
     }
   },
-  "permissions": [
-    "activeTab"
-  ]
+  "permissions": ["storage", "tabs"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  }
 }
