--- a/manifest.json
+++ b/manifest.json
@@ -10,10 +10,11 @@
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     }
+    
   },
   "permissions": ["storage", "tabs"],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "history.js"
   },
   "icons": {
     "16": "icons/icon16.png",
